# docs

./: .eslintrc.cjs  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  LICENSE  README.md  bun.lockb  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  svelte.config.js  vite.config.ts
config/: sidebar.ts
docs/: contributing.md  index.md
docs/actions/: dropzone.md  el_bound.md  fullscreen.md  snapshot.md  start_typing.md  type_hint.md
docs/browser/: active_el.md  base64.md  breakpoints.md  broadcast_channel.md  clipboard.md  dom_visible.md  event_dispatcher.md  event_listener.md  eye_dropper.md  favicon.md  file_dialog.md  fps.md  geolocation.md  image.md  intersection_observer.md  media_query.md  memory.md  mouse.md  mutation_observer.md  network.md  notification.md  on_key_stroke.md  performance_observer.md  permission.md  preferred_lang.md  push_notification.md  raf_fn.md  resize_observer.md  screen_orientation.md  storage.md  support.md  type_hint.md  url_query.md  useragent.md  vibrate.md  wake_lock.md  websocket.md  window_focus.md  window_scroll.md  window_size.md  (+1 more)
docs/css/: custom.css
docs/extend/: async_validator.md  change_case.md  fcm.md  fuse.md  idb_keyval.md  jwt.md  qrcode.md  sortable.md
docs/js/: custom.js  mermaid.min.js  windicss.js
docs/overrides/: main.html
docs/shared/: adjust_with_unit.md  async_state.md  create_event_hook.md  debounce.md  intervalfn.md  is.md  last_changed.md  len.md  make_destructurable.md  object_url.md  (+20 more)
src/: app.html
static/: worker.js
(+104 files in other folders)
